# pymodoro

./: config.example.yml  pyproject.toml
pymodoro/: __init__.py
tests/: __init__.py  integration.py
tests/unit/: pymodoro.py
tests/unittests/: pymodoro.py  tomatorunner.py
tomatonotifier/: __init__.py
tomatorunner/: config.py
