[tool.poetry]
name = "pymodoro"
version = "0.1.0"
description = "Pomodoro Timer"
authors = ["Misha Gorshenin <gorshenin.mv@gmail.com>"]
license = "MIT"
packages = [
    { include = "pymodoro" },
    { include = "tomatonotifier" },
    { include = "tomatorunner" }
    ]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^5.3"
pyqt5 = "^5.15.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
pymodoro = "pymodoro:main"
notifier = "tomatonotifier:main"
tests = "tests:tests"
unit = "tests:unit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
